--- a/index.html
+++ b/index.html
@@ -29,25 +29,18 @@
     <section class="premiere">
       <img src="img/zelda-botw.jpg" alt="fond" />
     </section>
-
     <section class="deuxieme">
-      <img src="img/zelda-bg_pattern_brown.png" alt="pattern brown" />
-      <article>
-        <div class="topbrown">
+        <div class="d">
           <p class="titre">Entrez dans un monde d'aventure</p>
-          <div class="hl-arrow"></div>
-          <p class="white">
+          <p>
             Oubliez tout ce que vous savez sur les jeux The Legend of Zelda.
             Plongez dans un monde de découverte, d'exploration et d'aventure
             dans The Legend of Zelda: Breath of the Wild, un nouveau jeu qui
             vient bouleverser la série à succès.
           </p>
-        </div>
-
-        <div class="basbrown">
           <img src="img/zelda-link-cheval.png" alt="zelda-link-cheval" />
-          <p class="white">Ouvre les yeux</p>
-          <p class="white">
+          <p>Ouvre les yeux</p>
+          <p>
             Après un sommeil de d'un siècle, Link se réveille seul dans un monde
             qu'il ne reconnaît pas. Le héros légendaire va désormais devoir
             explorer un territoire vaste et dangereux et retrouver la mémoire
@@ -56,7 +49,6 @@
             trouve sur sa route pour survivre.
           </p>
         </div>
-      </article>
     </section>
 
     <section class="troisieme">
