--- a/index.html
+++ b/index.html
@@ -19,40 +19,46 @@
       </div>
       <h3>Le jeu événement</h3>
       <nav>
-        <a href="">ENTRER</a>
-        <a href="">DECOUVRIR</a>
-        <a href="">COMBATTRE</a>
-        <a href="">S'EQUIPER</a>
-        <a href="">PLUS</a>
+        <ul>
+          <a href="">ENTRER</a>
+          <a href="">DECOUVRIR</a>
+          <a href="">COMBATTRE</a>
+          <a href="">S'EQUIPER</a>
+          <a href="">PLUS</a>
+        </ul>
       </nav>
     </header>
     <section class="premiere">
       <img src="img/zelda-botw.jpg" alt="fond" />
     </section>
+
     <section class="deuxieme">
-        <div class="d">
-          <p class="titre">Entrez dans un monde d'aventure</p>
-          <p>
-            Oubliez tout ce que vous savez sur les jeux The Legend of Zelda.
-            Plongez dans un monde de découverte, d'exploration et d'aventure
-            dans The Legend of Zelda: Breath of the Wild, un nouveau jeu qui
-            vient bouleverser la série à succès.
-          </p>
+      <div>
+        <h1 class="titre">Entrez dans un monde d'aventure</h1>
+        <p>
+          Oubliez tout ce que vous savez sur les jeux The Legend of Zelda.
+          Plongez dans un monde de découverte, d'exploration et d'aventure dans
+          The Legend of Zelda: Breath of the Wild, un nouveau jeu qui vient
+          bouleverser la série à succès.
+        </p>
+        <div class="imgetarticle">
           <img src="img/zelda-link-cheval.png" alt="zelda-link-cheval" />
-          <p>Ouvre les yeux</p>
-          <p>
-            Après un sommeil de d'un siècle, Link se réveille seul dans un monde
-            qu'il ne reconnaît pas. Le héros légendaire va désormais devoir
-            explorer un territoire vaste et dangereux et retrouver la mémoire
-            avant qu'Hyrule ne soit perdu à jamais. Link entreprend un périple
-            pour trouver des réponses où il devra se servir de tout ce qui se
-            trouve sur sa route pour survivre.
-          </p>
+          <article>
+            <h1>Ouvre les yeux</h1>
+            <p>
+              Après un sommeil de d'un siècle, Link se réveille seul dans un
+              monde qu'il ne reconnaît pas. Le héros légendaire va désormais
+              devoir explorer un territoire vaste et dangereux et retrouver la
+              mémoire avant qu'Hyrule ne soit perdu à jamais. Link entreprend un
+              périple pour trouver des réponses où il devra se servir de tout ce
+              qui se trouve sur sa route pour survivre.
+            </p>
+          </article>
         </div>
+      </div>
     </section>
 
     <section class="troisieme">
-      <img src="img/zelda-bg_pattern_white.png" alt="fond-blanc" />
       <div>
         <h1>Découvrez le vaste monde qui vous entoure</h1>
         <p>
@@ -62,18 +68,20 @@
           sheikah" pour voir une carte d'Hyrule qui permet de repérer des points
           d'intérêt.
         </p>
-        <img src="img/zelda-header-c.jpg" alt="" class="imgtroiss"/>
+        <img src="img/zelda-header-c.jpg" alt="" class="imgtroiss" />
         <p>
           Link peut couvrir rapidement un large territoire en montant à cheval,
           naviguer à travers les eaux d'Hyrule sur un radeau ou dévaler les
           pentes en surfant sur son bouclier. Link a également la possibilité de
           fendre le ciel grâce son paravoile.
         </p>
-      </div>
-      <div class="img">
-        <img src="img/zelda-png-d.png" alt="" />
-        <img src="img/zelda-png-a.png" alt="" />
-        <img src="img/zelda-png-c.png" alt="" />
+
+        <div class="img">
+          <img src="img/zelda-png-d.png" alt="" />
+          <img src="img/zelda-png-a.png" alt="" />
+          <img src="img/zelda-png-c.png" alt="" />
+        </div>
+
       </div>
     </section>
 
@@ -117,15 +125,14 @@
           <img src="img/zelda-grid-e.png" alt="" />
           <img src="img/zelda-grid-f.png" alt="" />
         </div>
-          <p>
-            Link peut également porter toutes sortes de tenues, et en alternant
-            ses vêtements il sera en mesure de se protéger des intempéries ou
-            d'esquiver les coups ennemis. Il existe une foule de tenues
-            différentes pour Link, des équipements pour se protéger de la neige
-            aux armures, mais prenez garde à ne pas porter de métal lors d'une
-            tempête ou vous pourriez vous faire électrocuter par la foudre !
-          </p>
-      
+        <p>
+          Link peut également porter toutes sortes de tenues, et en alternant
+          ses vêtements il sera en mesure de se protéger des intempéries ou
+          d'esquiver les coups ennemis. Il existe une foule de tenues
+          différentes pour Link, des équipements pour se protéger de la neige
+          aux armures, mais prenez garde à ne pas porter de métal lors d'une
+          tempête ou vous pourriez vous faire électrocuter par la foudre !
+        </p>
       </div>
 
       <div class="button">
