--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
     </section>
 
     <section class="quatrieme">
-      <img src="img/zelda-bg_pattern_brown.png" alt="" />
-      <h1 class="white">Combatter pour votre royaume</h1>
       <div>
+      <h1>Combatter pour votre royaume</h1>
         <p class="white">
           Grâce aux capacités d'adaptation de Link, celui-ci est capable
           d'acquérir différentes armes pour combattre. Néanmoins, ces armes
